[package]
name = "kaisantantoudaijin"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2021"

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
chrono = "0.4"
chrono-tz = "0.4"
structopt = "0.3"
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
thiserror = "1.0"
rand = { version = "0.7", features = ["small_rng"] }
futures = "0.3"
peg = "0.8"
async-trait = "0.1"
redis = { version = "0.21", default-features = false, features = ["aio", "tokio-comp"] }

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
