[package]
name = "kaisantantoudaijin"
version = "0.1.0"
authors = ["coord_e <me@coord-e.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono-tz = "0.9"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
peg = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.chrono]
version = "0.4"
default-features = false
features = [
  "clock",
  "std",
]

[dependencies.redis]
version = "0.25"
default-features = false
features = [
  "aio",
  "tokio-comp",
]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
  "cache",
  "client",
  "gateway",
  "model",
  "rustls_backend",
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "time",
]

[dev-dependencies]
once_cell = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
